antlr/ProgParser.cpp

// Generated from Prog.g4 by ANTLR 4.7.1


#include "ProgVisitor.h"

#include "ProgParser.h"


using namespace antlrcpp;
using namespace antlr4;

ProgParser::ProgParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ProgParser::~ProgParser() {
  delete _interpreter;
}

std::string ProgParser::getGrammarFileName() const {
  return "Prog.g4";
}

const std::vector<std::string>& ProgParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ProgParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ProgParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProgParser::GlobalVarContext *> ProgParser::ProgramContext::globalVar() {
  return getRuleContexts<ProgParser::GlobalVarContext>();
}

ProgParser::GlobalVarContext* ProgParser::ProgramContext::globalVar(size_t i) {
  return getRuleContext<ProgParser::GlobalVarContext>(i);
}

std::vector<ProgParser::FunctionContext *> ProgParser::ProgramContext::function() {
  return getRuleContexts<ProgParser::FunctionContext>();
}

ProgParser::FunctionContext* ProgParser::ProgramContext::function(size_t i) {
  return getRuleContext<ProgParser::FunctionContext>(i);
}


size_t ProgParser::ProgramContext::getRuleIndex() const {
  return ProgParser::RuleProgram;
}

antlrcpp::Any ProgParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::ProgramContext* ProgParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ProgParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(40);
        globalVar(); 
      }
      setState(45);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProgParser::CHAR)
      | (1ULL << ProgParser::INT32_T)
      | (1ULL << ProgParser::INT64_T)
      | (1ULL << ProgParser::VOID))) != 0)) {
      setState(46);
      function();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalVarContext ------------------------------------------------------------------

ProgParser::GlobalVarContext::GlobalVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProgParser::TypeContext* ProgParser::GlobalVarContext::type() {
  return getRuleContext<ProgParser::TypeContext>(0);
}

ProgParser::NameContext* ProgParser::GlobalVarContext::name() {
  return getRuleContext<ProgParser::NameContext>(0);
}

ProgParser::ExprContext* ProgParser::GlobalVarContext::expr() {
  return getRuleContext<ProgParser::ExprContext>(0);
}


size_t ProgParser::GlobalVarContext::getRuleIndex() const {
  return ProgParser::RuleGlobalVar;
}

antlrcpp::Any ProgParser::GlobalVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitGlobalVar(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::GlobalVarContext* ProgParser::globalVar() {
  GlobalVarContext *_localctx = _tracker.createInstance<GlobalVarContext>(_ctx, getState());
  enterRule(_localctx, 2, ProgParser::RuleGlobalVar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    type();
    setState(53);
    name();
    setState(54);
    match(ProgParser::T__0);
    setState(55);
    expr(0);
    setState(56);
    match(ProgParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

ProgParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProgParser::RetTypeContext* ProgParser::FunctionContext::retType() {
  return getRuleContext<ProgParser::RetTypeContext>(0);
}

tree::TerminalNode* ProgParser::FunctionContext::NAME() {
  return getToken(ProgParser::NAME, 0);
}

ProgParser::BlockFunctionContext* ProgParser::FunctionContext::blockFunction() {
  return getRuleContext<ProgParser::BlockFunctionContext>(0);
}

ProgParser::SigParamsContext* ProgParser::FunctionContext::sigParams() {
  return getRuleContext<ProgParser::SigParamsContext>(0);
}


size_t ProgParser::FunctionContext::getRuleIndex() const {
  return ProgParser::RuleFunction;
}

antlrcpp::Any ProgParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::FunctionContext* ProgParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 4, ProgParser::RuleFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    retType();
    setState(59);
    match(ProgParser::NAME);
    setState(60);
    match(ProgParser::T__2);
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProgParser::CHAR)
      | (1ULL << ProgParser::INT32_T)
      | (1ULL << ProgParser::INT64_T))) != 0)) {
      setState(61);
      sigParams();
    }
    setState(64);
    match(ProgParser::T__3);
    setState(65);
    blockFunction();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockFunctionContext ------------------------------------------------------------------

ProgParser::BlockFunctionContext::BlockFunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProgParser::DeclareContext *> ProgParser::BlockFunctionContext::declare() {
  return getRuleContexts<ProgParser::DeclareContext>();
}

ProgParser::DeclareContext* ProgParser::BlockFunctionContext::declare(size_t i) {
  return getRuleContext<ProgParser::DeclareContext>(i);
}

std::vector<ProgParser::InstructionContext *> ProgParser::BlockFunctionContext::instruction() {
  return getRuleContexts<ProgParser::InstructionContext>();
}

ProgParser::InstructionContext* ProgParser::BlockFunctionContext::instruction(size_t i) {
  return getRuleContext<ProgParser::InstructionContext>(i);
}


size_t ProgParser::BlockFunctionContext::getRuleIndex() const {
  return ProgParser::RuleBlockFunction;
}

antlrcpp::Any ProgParser::BlockFunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitBlockFunction(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::BlockFunctionContext* ProgParser::blockFunction() {
  BlockFunctionContext *_localctx = _tracker.createInstance<BlockFunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, ProgParser::RuleBlockFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(ProgParser::T__4);
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProgParser::CHAR)
      | (1ULL << ProgParser::INT32_T)
      | (1ULL << ProgParser::INT64_T))) != 0)) {
      setState(68);
      declare();
      setState(69);
      match(ProgParser::T__1);
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProgParser::T__2)
      | (1ULL << ProgParser::T__12)
      | (1ULL << ProgParser::T__13)
      | (1ULL << ProgParser::T__14)
      | (1ULL << ProgParser::T__24)
      | (1ULL << ProgParser::IF)
      | (1ULL << ProgParser::RETURN)
      | (1ULL << ProgParser::WHILE)
      | (1ULL << ProgParser::NAME)
      | (1ULL << ProgParser::CHARACTER)
      | (1ULL << ProgParser::NUMBER))) != 0)) {
      setState(76);
      instruction();
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(ProgParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

ProgParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProgParser::ExprContext* ProgParser::InstructionContext::expr() {
  return getRuleContext<ProgParser::ExprContext>(0);
}

ProgParser::IfStatementContext* ProgParser::InstructionContext::ifStatement() {
  return getRuleContext<ProgParser::IfStatementContext>(0);
}

ProgParser::WhileStatementContext* ProgParser::InstructionContext::whileStatement() {
  return getRuleContext<ProgParser::WhileStatementContext>(0);
}

ProgParser::ReturnStatementContext* ProgParser::InstructionContext::returnStatement() {
  return getRuleContext<ProgParser::ReturnStatementContext>(0);
}


size_t ProgParser::InstructionContext::getRuleIndex() const {
  return ProgParser::RuleInstruction;
}

antlrcpp::Any ProgParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::InstructionContext* ProgParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 8, ProgParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ProgParser::T__2:
      case ProgParser::T__12:
      case ProgParser::T__13:
      case ProgParser::T__14:
      case ProgParser::T__24:
      case ProgParser::NAME:
      case ProgParser::CHARACTER:
      case ProgParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        expr(0);
        setState(85);
        match(ProgParser::T__1);
        break;
      }

      case ProgParser::IF: {
        enterOuterAlt(_localctx, 2);
        setState(87);
        ifStatement();
        break;
      }

      case ProgParser::WHILE: {
        enterOuterAlt(_localctx, 3);
        setState(88);
        whileStatement();
        break;
      }

      case ProgParser::RETURN: {
        enterOuterAlt(_localctx, 4);
        setState(89);
        returnStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

ProgParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProgParser::ReturnStatementContext::RETURN() {
  return getToken(ProgParser::RETURN, 0);
}

ProgParser::ExprContext* ProgParser::ReturnStatementContext::expr() {
  return getRuleContext<ProgParser::ExprContext>(0);
}


size_t ProgParser::ReturnStatementContext::getRuleIndex() const {
  return ProgParser::RuleReturnStatement;
}

antlrcpp::Any ProgParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::ReturnStatementContext* ProgParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, ProgParser::RuleReturnStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(ProgParser::RETURN);
    setState(94);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(93);
      expr(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

ProgParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProgParser::IfStatementContext::IF() {
  return getToken(ProgParser::IF, 0);
}

ProgParser::BlockContext* ProgParser::IfStatementContext::block() {
  return getRuleContext<ProgParser::BlockContext>(0);
}

ProgParser::ExprContext* ProgParser::IfStatementContext::expr() {
  return getRuleContext<ProgParser::ExprContext>(0);
}

ProgParser::ElseStatementContext* ProgParser::IfStatementContext::elseStatement() {
  return getRuleContext<ProgParser::ElseStatementContext>(0);
}


size_t ProgParser::IfStatementContext::getRuleIndex() const {
  return ProgParser::RuleIfStatement;
}

antlrcpp::Any ProgParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::IfStatementContext* ProgParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, ProgParser::RuleIfStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(ProgParser::IF);

    setState(97);
    expr(0);
    setState(98);
    block();
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ProgParser::ELSE) {
      setState(99);
      elseStatement();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseStatementContext ------------------------------------------------------------------

ProgParser::ElseStatementContext::ElseStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProgParser::ElseStatementContext::ELSE() {
  return getToken(ProgParser::ELSE, 0);
}

ProgParser::BlockContext* ProgParser::ElseStatementContext::block() {
  return getRuleContext<ProgParser::BlockContext>(0);
}

ProgParser::IfStatementContext* ProgParser::ElseStatementContext::ifStatement() {
  return getRuleContext<ProgParser::IfStatementContext>(0);
}


size_t ProgParser::ElseStatementContext::getRuleIndex() const {
  return ProgParser::RuleElseStatement;
}

antlrcpp::Any ProgParser::ElseStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitElseStatement(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::ElseStatementContext* ProgParser::elseStatement() {
  ElseStatementContext *_localctx = _tracker.createInstance<ElseStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, ProgParser::RuleElseStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(102);
      match(ProgParser::ELSE);
      setState(103);
      block();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(104);
      match(ProgParser::ELSE);
      setState(105);
      ifStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStatementContext ------------------------------------------------------------------

ProgParser::WhileStatementContext::WhileStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProgParser::WhileStatementContext::WHILE() {
  return getToken(ProgParser::WHILE, 0);
}

ProgParser::BlockContext* ProgParser::WhileStatementContext::block() {
  return getRuleContext<ProgParser::BlockContext>(0);
}

ProgParser::ExprContext* ProgParser::WhileStatementContext::expr() {
  return getRuleContext<ProgParser::ExprContext>(0);
}


size_t ProgParser::WhileStatementContext::getRuleIndex() const {
  return ProgParser::RuleWhileStatement;
}

antlrcpp::Any ProgParser::WhileStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitWhileStatement(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::WhileStatementContext* ProgParser::whileStatement() {
  WhileStatementContext *_localctx = _tracker.createInstance<WhileStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, ProgParser::RuleWhileStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(ProgParser::WHILE);

    setState(109);
    expr(0);
    setState(110);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ProgParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProgParser::InstructionContext *> ProgParser::BlockContext::instruction() {
  return getRuleContexts<ProgParser::InstructionContext>();
}

ProgParser::InstructionContext* ProgParser::BlockContext::instruction(size_t i) {
  return getRuleContext<ProgParser::InstructionContext>(i);
}


size_t ProgParser::BlockContext::getRuleIndex() const {
  return ProgParser::RuleBlock;
}

antlrcpp::Any ProgParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::BlockContext* ProgParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 18, ProgParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(ProgParser::T__4);
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProgParser::T__2)
      | (1ULL << ProgParser::T__12)
      | (1ULL << ProgParser::T__13)
      | (1ULL << ProgParser::T__14)
      | (1ULL << ProgParser::T__24)
      | (1ULL << ProgParser::IF)
      | (1ULL << ProgParser::RETURN)
      | (1ULL << ProgParser::WHILE)
      | (1ULL << ProgParser::NAME)
      | (1ULL << ProgParser::CHARACTER)
      | (1ULL << ProgParser::NUMBER))) != 0)) {
      setState(113);
      instruction();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(119);
    match(ProgParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclareContext ------------------------------------------------------------------

ProgParser::DeclareContext::DeclareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProgParser::TypeContext* ProgParser::DeclareContext::type() {
  return getRuleContext<ProgParser::TypeContext>(0);
}

ProgParser::NameContext* ProgParser::DeclareContext::name() {
  return getRuleContext<ProgParser::NameContext>(0);
}


size_t ProgParser::DeclareContext::getRuleIndex() const {
  return ProgParser::RuleDeclare;
}

antlrcpp::Any ProgParser::DeclareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitDeclare(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::DeclareContext* ProgParser::declare() {
  DeclareContext *_localctx = _tracker.createInstance<DeclareContext>(_ctx, getState());
  enterRule(_localctx, 20, ProgParser::RuleDeclare);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    type();
    setState(122);
    name();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

ProgParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProgParser::TypeContext::CHAR() {
  return getToken(ProgParser::CHAR, 0);
}

tree::TerminalNode* ProgParser::TypeContext::INT32_T() {
  return getToken(ProgParser::INT32_T, 0);
}

tree::TerminalNode* ProgParser::TypeContext::INT64_T() {
  return getToken(ProgParser::INT64_T, 0);
}


size_t ProgParser::TypeContext::getRuleIndex() const {
  return ProgParser::RuleType;
}

antlrcpp::Any ProgParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::TypeContext* ProgParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 22, ProgParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ProgParser::CHAR)
      | (1ULL << ProgParser::INT32_T)
      | (1ULL << ProgParser::INT64_T))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SigTypeContext ------------------------------------------------------------------

ProgParser::SigTypeContext::SigTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ProgParser::SigTypeContext::CHAR() {
  return getToken(ProgParser::CHAR, 0);
}

tree::TerminalNode* ProgParser::SigTypeContext::INT32_T() {
  return getToken(ProgParser::INT32_T, 0);
}

tree::TerminalNode* ProgParser::SigTypeContext::INT64_T() {
  return getToken(ProgParser::INT64_T, 0);
}

ProgParser::TypeContext* ProgParser::SigTypeContext::type() {
  return getRuleContext<ProgParser::TypeContext>(0);
}


size_t ProgParser::SigTypeContext::getRuleIndex() const {
  return ProgParser::RuleSigType;
}

antlrcpp::Any ProgParser::SigTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitSigType(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::SigTypeContext* ProgParser::sigType() {
  SigTypeContext *_localctx = _tracker.createInstance<SigTypeContext>(_ctx, getState());
  enterRule(_localctx, 24, ProgParser::RuleSigType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(136);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(126);
      match(ProgParser::CHAR);
      setState(127);
      match(ProgParser::T__6);
      setState(128);
      match(ProgParser::T__7);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(129);
      match(ProgParser::INT32_T);
      setState(130);
      match(ProgParser::T__6);
      setState(131);
      match(ProgParser::T__7);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(132);
      match(ProgParser::INT64_T);
      setState(133);
      match(ProgParser::T__6);
      setState(134);
      match(ProgParser::T__7);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(135);
      type();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetTypeContext ------------------------------------------------------------------

ProgParser::RetTypeContext::RetTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ProgParser::TypeContext* ProgParser::RetTypeContext::type() {
  return getRuleContext<ProgParser::TypeContext>(0);
}

tree::TerminalNode* ProgParser::RetTypeContext::VOID() {
  return getToken(ProgParser::VOID, 0);
}


size_t ProgParser::RetTypeContext::getRuleIndex() const {
  return ProgParser::RuleRetType;
}

antlrcpp::Any ProgParser::RetTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitRetType(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::RetTypeContext* ProgParser::retType() {
  RetTypeContext *_localctx = _tracker.createInstance<RetTypeContext>(_ctx, getState());
  enterRule(_localctx, 26, ProgParser::RuleRetType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ProgParser::CHAR:
      case ProgParser::INT32_T:
      case ProgParser::INT64_T: {
        enterOuterAlt(_localctx, 1);
        setState(138);
        type();
        break;
      }

      case ProgParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(139);
        match(ProgParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SigParamsContext ------------------------------------------------------------------

ProgParser::SigParamsContext::SigParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ProgParser::SigDeclareContext *> ProgParser::SigParamsContext::sigDeclare() {
  return getRuleContexts<ProgParser::SigDeclareContext>();
}

ProgParser::SigDeclareContext* ProgParser::SigParamsContext::sigDeclare(size_t i) {
  return getRuleContext<ProgParser::SigDeclareContext>(i);
}


size_t ProgParser::SigParamsContext::getRuleIndex() const {
  return ProgParser::RuleSigParams;
}

antlrcpp::Any ProgParser::SigParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ProgVisitor*>(visitor))
    return parserVisitor->visitSigParams(this);
  else
    return visitor->visitChildren(this);
}

ProgParser::SigParamsContext* ProgParser::sigParams() {
  SigParamsContext *_localctx = _tracker.createInstance<SigParamsContext>(_ctx, getState());
  enterRule(_localctx, 28, ProgParser::RuleSigParams);
  size_t _la = 0;
